--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -45,20 +45,20 @@ and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 -->
 
 <p>
-SliTaz GNU/Linux stable release is published with the project tools, 
+SliTaz GNU/Linux stable release is published with the project tools
 manuals and <a href="relnotes.en.html">Release Notes</a> installed on
 the system. Manuals and this page are accessible through the standard menu.
 Please check the <a href="http://www.slitaz.org/en/">project page</a> for
 general information on SliTaz. To use and configure the system you can
 read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
 Support can be found on the SliTaz mailing list or the community 
-<a href="http://forum.slitaz.org/#idx2">Forum</a>. 
+<a href="http://forum.slitaz.org/">Forum</a>. 
 </p>
 
 <ul>
 	<li><a href="#start">Getting started guide</a></li>
 	<li><a href="relnotes.en.html">Release Notes for 3.0</a></li>
-	<li><a href="http://doc.slitaz.org/">Online Documentation</a></li>
+	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
 </ul>
 
 <a name="start"></a>
