Ũpdate index.en.html & index.pt.html

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -77,7 +77,7 @@ or by using the "System Tools" menu entry -> "Wireless networks connections".
 </p>
 <p>
 More detailed information can be found in the Handbook: 
-<a href="http://www.slitaz.org/en/doc/handbook/network-config.html"
+<a href="http://doc.slitaz.org/en:handbook:networkconf"
 	>Network configuration</a>
 </p>
 
@@ -155,7 +155,7 @@ everything is persistent.
 <p>
 To generate a LiveUSB system you can use the "Tazusb LiveUSB Tool" from the "System Tools"
 menu or <code>tazusb</code> from the command line. More information can be found in the SliTaz
-Handbook: <a href="http://www.slitaz.org/en/doc/handbook/liveusb.html">LiveUSB media</a>
+Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 </p>
 
 <!-- End of content -->
