--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -16,7 +16,8 @@
 
 <!-- Header and quick navigation -->
 <div id="header">
-<h1><font color="#3E1220">SliTaz - Documentação do Sistema</font></h1>
+    <a name="top"></a>
+    <h1><font color="#3E1220">SliTaz - Documentação do Sistema</font></h1>
 </div>
 
 <div id="quicknav">
@@ -33,6 +34,7 @@
 
 <h2><font color="#DF8F06">Documentação (pt)</font></h2>
 
+<!--
 <p>
 A versão de testes (cooking) do SliTaz não fornece notas de lançamento, 
 qualquer mudança para esta versão é anunciada no website e o 
@@ -41,7 +43,27 @@ e atividades do projeto. Assim como na versão estável, você irá obter
 informações sobre a versão de testes no website e suporte no 
 <a href="http://forum.slitaz.org/">fórum</a> do projeto.
 </p>
+-->
 
+<p>
+O SliTaz GNU/Linux versão estável é distribuido com os manuais das 
+ferramentas do projetos e <a href="relnotes.pt.html">Notas de Lançamento</a>
+instalados no sistema. Os manuais e esta página podem ser acessados por
+meio do menu. Por favor acesse a 
+<a href="http://www.slitaz.org/en/">página do projeto</a> para informações
+gerais sobre o SliTaz. Para usar e configurar o sistema você pode ler o
+<a href="http://doc.slitaz.org/pt:handbook:start">Manual</a>. Pode-se
+obter suporte na nossa lista de discussão ou no
+<a href="http://forum.slitaz.org/">Fórum</a>.
+</p>
+
+<ul>
+	<li><a href="#start">Primeiros Passos</a></li>
+	<li><a href="relnotes.pt.html">Notas de Lançamento para a versão 3.0</a></li>
+	<li><a href="http://doc.slitaz.org/pt:start">Documentação Online</a></li>
+</ul>
+
+<a name="start"></a>
 <h2><font color="#DF8F06">Primeiros Passos</font></h2>
 
 <a name="network"></a>
@@ -59,7 +81,7 @@ entrada de menu "Ferramentas do Sistema" -> "Gerenciador de Redes Wireless".
 </p>
 <p>
 Maiores informações podem ser encontradas no Manual Do Slitaz: 
-<a href="http://www.slitaz.org/pt/doc/handbook/network-config.html"
+<a href="http://doc.slitaz.org/pt:handbook:networkconf"
 	>Configuração de Rede</a>
 </p>
 
@@ -151,7 +173,7 @@ ou Frugal e todas as alterações serão persistentes.
 Para criar um sistema LiveUSB você pode usar o "Tazusb LiveUSB Tool" no
 menu "Ferramentas do Sistema" ou digitar <code>tazusb</code> na linha de
 comando. Maiores informações podem ser encontradas no Manual do SliTaz:
-<a href="http://www.slitaz.org/pt/doc/handbook/liveusb.html">Mídia LiveUSB</a>
+<a href="http://doc.slitaz.org/pt:handbook:liveusb">Mídia LiveUSB</a>
 </p>
 
 <!-- End of content -->
