relnotes: tiny edits

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -112,7 +112,7 @@ of the preset flavors on the mirror. Then simply generate your distribution
 with the "Tazlito" tool.
 </p>
 <p>
-The ISO image is now hydrid: it can be copied on a USB stick without formating
+The ISO image is now hydrid: it can also be copied on a USB stick without formating
 it (using <code>dd</code>).
 </p>
 
@@ -132,7 +132,7 @@ The new toolchain comprises of: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 <h3><font color="#6c0023">UTF-8 support</font></h3>
 With this release, Slitaz community can enjoy full UTF-8 support.
 It uses standard PO files for the translation of all SliTaz related tools, boxes and utilities.
-With better internationalization support (russian, portuguese, chinese, arabic and many more), 
+With better internationalization support (russian, portuguese, chinese, and many more), 
 contributors can now use graphical tools such as poedit to make translations using GNU gettext standards. 
 The labs also have a i18n project to easily upload files to be included in the distribution. 
 The locale packs have more translated application(s) messages for the core system and 
@@ -165,7 +165,7 @@ have detected the device before mounting it on / (root).
 <a name="packages"></a>
 <h3><font color="#6c0023">Software Packages</font></h3>
 <p>
-SliTaz 3.0 has 2291 packages in the database. A wide variety of packages
+SliTaz 3.0 has around 2300 packages in the database. A wide variety of packages
 have been commited. Tazpkg package manager also supports converting 
 deb/rpm/arch/slackware/ipk packages to Slitaz native format
 A lot of time was also spent maintaining many professionnal grade software
@@ -247,9 +247,12 @@ and the U.S.
 	<li>Mallory Mollo</li>
 	<li>Mike D. Smith</li>
 	<li>Allan Pinto</li>
+	<li>Matthew Sheets</li>
+	<li>Liu Peng</li>
 	<li>Alice Ayanami</li>
 	<li>F. Steiner</li>
 	<li>Chen Yufei</li>
+	<li>Jesse Lehman</li>
 	<li>Bill Nagel</li>
 	<li>Michael Dupont</li>
 	<li>Franco Azzano</li>
