--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -273,8 +273,8 @@ who have taken the time to help advance the distribution.
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
 	<a href="relnotes.en.html">en</a> |
-	<a href="relnotes.fr.html">fr</a> <!-- |
-	<a href="relnotes.pt.html">pt</a> -->
+	<a href="relnotes.fr.html">fr</a> |
+	<a href="relnotes.pt.html">pt</a> 
 </div>
 
 <div id="copy">
