relnotes:en add security link (thanks claudinei)

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -44,6 +44,7 @@
 	<li><a href="#install">HD Install and LiveUSB.</a></li>
 	<li><a href="#packages">Software Packages.</a></li>
 	<li><a href="#desktop">Core Desktop.</a></li>
+	<li><a href="#security">Security.</a></li>
 	<li><a href="#upgrade">From 2.0 to 3.0.</a></li>
 	<li><a href="#people">People of the Project.</a></li>
 </ul>
