--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -109,8 +109,8 @@ of the preset flavors on the mirror. Then simply generate your distribution
 with the "Tazlito" tool.
 </p>
 <p>
-The ISO image is now hydrid: it can also be copied onto an USB stick without formating
-(using <code>dd</code>).
+The ISO image now uses a 'hybrid' system: it can also be copied onto an USB stick 
+without formating it (using <code>dd</code>).
 </p>
 
 <a name="toolchain"></a>
