link all relnotes languages and quick acces from en index

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -57,7 +57,11 @@ Support can be found on the SliTaz mailing list or the community
 
 <ul>
 	<li><a href="#start">Getting started guide</a></li>
-	<li><a href="relnotes.en.html">Release Notes for 3.0</a></li>
+	<li><a href="relnotes.en.html">Release Notes for 3.0</a> -
+	<a href="relnotes.cn.html">cn</a> |
+	<a href="relnotes.en.html">en</a> |
+	<a href="relnotes.fr.html">fr</a> |
+	<a href="relnotes.pt.html">pt</a></li>
 	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
 </ul>
 
