--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -273,6 +273,7 @@ who have taken the time to help advance the distribution.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
+	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
 	<a href="relnotes.pt.html">pt</a> 
