--- a/slitaz/relnotes.pt.html
+++ b/slitaz/relnotes.pt.html
@@ -294,9 +294,10 @@ avanço do projeto.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Topo da Página</a> - Outras Linguages:
+	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
-	<a href="relnotes.pt.html">pt</a>
+	<a href="relnotes.pt.html">pt</a> 
 </div>
 
 <div id="copy">
