--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -280,6 +280,7 @@ utilisateurs qui ont pris le temps d'aider de faire avancer la distribution.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Début de la page</a> - Autres languages:
+	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
 	<a href="relnotes.pt.html">pt</a> 
