--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -57,11 +57,11 @@ la nouvelle version stable de SliTaz paraît après un an de développement.
 
 </p>
 <ul>
-    <li>Scripts de démarrage réécris et plus rapides</li>
+    <li>Scripts de démarrage réécrits et plus rapides</li>
     <li>Amélioration des outils maison</li>
-    <li>Better theme and integration</li>
+    <li>Amélioration de l'integration et des thèmes du Window manager</li>
     <li>Adoption de Midori comme navigateur par défaut</li>
-    <li>Meilleur support de matériel. En particulier pour les cartes wiFi</li>
+    <li>Meilleur support de matériel. En particulier pour les cartes WiFi</li>
     <li>Virtualisation rapide avec lguest</li>
     <li>SliTaz pro : OpenERP, LAMP, Glpi et plus</li>
 	<li>Les LiveCD et LiveUSB plus faciles à customiser (avec tazlitobox et tazusbbox)</li>
@@ -82,13 +82,13 @@ L'assistance aux utilisateurs est assurée à travers une liste de diffusion et le
 <p>
 SliTaz GNU/Linux supporte les machines à base de processeurs Intel i486 ou x86.
 Un minimum de 192Mo de mémoire sont nécessaires pour utiliser le core LiveCD. 
-64Mo pour la saveur "slitaz-loram" flavor et 16Mo pour la saveur "slitaz-loram-cdrom".
+80Mo pour la saveur "slitaz-loram" flavor et 16Mo pour la saveur "slitaz-loram-cdrom".
 </p>
 <p>
 Avec la saveur slitaz-loram, le système est moins réactif, mais permet une installation de
 SliTaz en mode graphique sur de très vieilles machines.
 Une fois installée, SliTaz fontionne avec au minimum 16Mo de mémoire. 
-Mais oubliez Firefox pour surfer sur Internet ! Préférez un navigateur en mode text, tel que 'links' par exemple.
+Mais oubliez Firefox pour surfer sur Internet ! Préférez un navigateur en mode texte, tel que 'links' par exemple.
 </p>
 <p>
 SliTaz 3.0 contient tous les pilotes et outils, comme 915resolution, pour fonctionner sur
@@ -100,7 +100,7 @@ une large gamme de netbooks (Eeepc, HP mini, Aspire One etc.).
 <p>
 SliTaz GNU/Linux est distribuée sous la forme d'un LiveCD bootable qui peut être utilisé 
 comme un système nomade ou installé graphiquement sur le disque dur.
-Lors de l'ionstallation ou mis à jour de sliTaz, les paramètres, les données et les applications sont conservées.
+Lors de l'installation ou la mise à jour de sliTaz, les paramètres, les données et les applications sont conservées.
 </p>
 <p>
 Le LiveCD peut également être customisé et simplement reconstruit à 
@@ -120,7 +120,7 @@ sans qu'il ne soit nécessaire de la formater (utilisez <code>dd</code> pour le f
 SliTaz 3.0 est livrée avec la nouvelle toolchain qui a servi à 
 recompiler tout le système.
 Le noyau Linux (2.6.30.6) divisé en plusieurs paquets contenants plus de pilotes
-et de fonctionnalitées.
+et de fonctionnalités.
 Certains pilotes ont été compilés dans le noyau pour en accélérer le 
 chargement.
 </p>
@@ -132,30 +132,26 @@ La nouvelle tootlchain inclue: Binutils 2.19.1, GCC 4.4.1, Glibc 2.10.1
 <h3><font color="#6c0023">Support de l'UTF-8</font></h3>
 Avec cette nouvelle version, la communauté peut pleinement profiter du support de l'UTF-8.
 SliTaz utilise les fichiers .PO pour la traduction de tous ses outils et boîtes de dialogues.
-
-
-With this release, the Slitaz community can enjoy full UTF-8 support.
-SliTaz uses standard PO files for the translation of all SliTaz related tools, boxes and utilities.
 Avec un meilleur support de l'internationalisation (russe, portugais, chinois, et beaucoup plus),
 les contributeurs peuvent utiliser des outils comme poedit et GNU gettext pour la traduction des outils.
 Un projet i18n a été créé dans les labs pour faciliter le téléchargement des fichiers à traduire.
-Les packs locale ont plus traduit les messages d'application pour le système central et
+Les packs locale ont plus de messages d'application traduits pour le système central et
 quelques paquets supplémentaires pour des applications telles que Gimp, Abiword, Gnumeric, etc
 <a name="xorg"></a>
 <h3><font color="#6c0023">Serveur Xorg</font></h3>
 <p>
 SliTaz utilise désormais le gestionnaire de fenêtre Xorg ( nous essayerons malgrés tout 
 conserver une saveur Xvesa).
-Avec l'utilitaire tazx vous pouvez reconfigurer Xorg et choisir le bon pîlote pour votre carte vidéo.
+Avec l'utilitaire tazx vous pouvez reconfigurer Xorg et choisir le bon pilote pour votre carte vidéo.
 Par défaut Xorg est installé avec le driver vesa  qui fonctionne correctement
  avec la plsupart des cartes; cependant vous pouvez être amené à modifier le fichier xorg.conf
-si vous installez d'autre pîàlote que celui là.
+si vous installez un autre pilote.
 </p>
 
 <a name="install"></a>
 <h3><font color="#6c0023">Installation sur disque dur et LiveUSB</font></h3>
 <p>
-L'installation est entièrement automatique et peut se faire graphiquement ou en mode text.
+L'installation est entièrement automatique et peut se faire graphiquement ou en mode texte.
 Dans cette version l'installeur vous laissera choisir une partition séparée pour /home,
 le mot de passe de l'utilisateur root et l'ouverture de session par défaut.
 L'installeur prend aussi en charge l'installation depuis une session LiveUSB.
@@ -172,9 +168,9 @@ L'option rootdelay laisse le temps au Kernel de détecter tous les périphériques 
 <p>
 SliTaz 3.0 à environ 2300 paquets dans sa base.
 Une grande variété de paquets ont été ajoutés et le gestionnaire de paquets
-Tazpkg peut convertir les paquets deb/rpm/arch/slackware/ipk au SliTaz (.tazpkg).
+Tazpkg peut convertir les paquets deb/rpm/arch/slackware/ipk au format SliTaz (.tazpkg).
 
-Beaucoup de temps a également été consacrées à la maintenance des logiciels de qualité professionnelle
+Beaucoup de temps a également été consacré à la maintenance des logiciels de qualité professionnelle
 tels que OpenERP, MySQL, GLPI.
 </p>
 <p>
@@ -190,31 +186,31 @@ par SliTaz build Bot: <a href="http://bb.slitaz.org/">bb.slitaz.org</a>
 <p>
 Le bureau de base contient une sélection de logiciels pour naviguer sur Internet, écouter de la musique, 
 manipuler du son, des images, programmer ou graver des CD-R.
-Il suffit d'un clic dans le menu de l'application pour trouver le logiciel classé par catégorie.
+Il suffit d'un clic dans le menu de l'application pour trouver un logiciel classé par catégorie.
 </p>
 <p>
 Une grande attention à été apporté à l'apparance et à l'intégration des applications dans 
-le bureau et un nouveau thème SliTaz (icones, Openbox, GTK) à été crée pour l'occasion.
+le bureau et un nouveau thème SliTaz (icones, Openbox, GTK) à été créé pour l'occasion.
 </p>
 <a name="security"></a>
 <h3><font color="#6c0023">Securité</font></h3>
 <p>
-SliTaz est plus sûre et solide maintenant et les règles de pare-feu ont été mis à jour. Un
+SliTaz est plus sûre et solide maintenant et les règles de pare-feu ont été mises à jour. Un
 pare-feu peut être installé en utilisant la boîte de tazhw graphique et serverbox peut aider
-de maintenir le pare-feu installé. Mountbox peuvent gérer les périphériques en cryptographie avec
-devmapper et les outils de configuration crypte permettre le chiffrement de périphériques de bloc.
+à maintenir le pare-feu installé. Mountbox peut gérer les périphériques en cryptographie avec
+devmapper et les outils de configuration crypte permettrent le chiffrement des périphériques de bloc.
 </p>
 
 <a name="upgrade"></a>
 <h3><font color="#6c0023">De la 2.0 à la 3.0</font></h3>
 <p>
 L'install de SliTaz offre une fonction de mise à jour vous permettant de
-mettre à jour depuis une version '2 .0 'à '3 .0'.
+mettre à jour depuis une version '2 .0' à '3 .0'.
 Pour mettre à niveau le système, démarrez «LiveCD stable», lancez le programme d'installation, puis sélectionnez
 l'option mise à niveau.
 Préciser la partition contenant le système que vous souhaitez mettre à jour. L'
 installeur nettoyera le système et réinstallera tous les paquets non
-présents sur le CD depuis miroir. Lorsque cela est terminé vous pouvez rebooter
+présents sur le CD depuis le miroir. Lorsque cela est terminé vous pouvez rebooter
 avec votre nouvelle version de SliTaz.
 </p>
 <p>
@@ -223,10 +219,10 @@ du répertoire /etc (etc.tar.gz) dans /var/lib/slitaz-install.
 </p>
 <p>
 Pour migrer de la 2.0 à la 3.0, vous pouvez également utiliser l'option 'set-release' du gestionnaire de paquet "Tazpkg",
-Soyez averti que cette méthode n'est pas épprouvée et peut demander quelques 
+Soyez averti que cette méthode n'est pas éprouvée et peut demander quelques 
 interventions manuelles de votre part.
 Si vous souhaîtez procéder ainsi ré-installez tazpkg depuis la version 3.0 de SliTaz, car 
-le format de compression des paquets à changés.
+le format de compression des paquets a changé.
 </p>
 
 <a name="people"></a>
